# github-demo

./: AddSubClass.h  CMakeLists.txt  README.md  main.cpp  red-line.md  test.cpp  tests.h
.github/actions/install/: action.yml
.github/actions/run/: action.yml
.github/actions/setup/: action.yml
.github/actions/test/: action.yml
.github/actions/try/: action.yml
.github/workflows/: build_benchmark.yml  build_run.yml  build_test.yml  build_try.yml  on_tag.yml
include/: tests.h
